--- a/financas/templates/index.html
+++ b/financas/templates/index.html
@@ -14,6 +14,8 @@
             <ul class="navbar-links">
                 <li><a href="{% url 'index' %}" class="navbar-link">Página Inicial</a></li>
                 <li><a href="{% url 'relatorio_categoria' %}" class="navbar-link">Relatório por Categoria</a></li>
+                <li><a href="{% url 'lancar_transacao' %}" class="navbar-link">Lançar Transação</a></li>
+                <li><a href="{% url 'cadastrar_categoria' %}" class="navbar-link">Cadastrar Categoria</a></li>
             </ul>
         </div>
     </nav>
@@ -86,5 +88,13 @@
             </tbody>
         </table>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <p>&copy; 2024 Controle de Finanças - Todos os direitos reservados.</p>
+        
+        </div>
+    </footer>
 </body>
 </html>
